# EKF

./: .gitignore  CMakeLists.txt  EKF.kdev4  LICENSE  README.md
include/EKF/: EKF.h  core.h  types.h
src/: main.cpp
src/EKF/: EKF.cpp  core.cpp
